--- a/Tomato/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/Tomato/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -51,3 +51,11 @@
 }
 
 
+@media (max-width : 1050px){
+    .explore-menu-text{
+        max-width: 100%;
+        font-size: 14px;
+    }
+    
+}
+
