--- a/Tomato/frontend/src/components/Footer/Footer.css
+++ b/Tomato/frontend/src/components/Footer/Footer.css
@@ -45,3 +45,15 @@
     background-color: gray;
     border: none;
 }
+
+
+@media (max-widht:750px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
+}
